<!--
  Copyright (C) 2016 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>
    <string name="app_name">Popular Movies</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="error_message">Failed to get result, please try again</string>

    <!-- Preferences -->
    <string name="pref_sort_by_list">SORT_BY</string>
    <string name="image_backdrop">Movie Poster</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="try_again">Try Again</string>
    <string name="original_title">Original Title:</string>
    <string name="release_date">Release Date:</string>
    <string name="vote_average">Vote Average:</string>
    <string name="no_data_available" type="id">No Data Available</string>
</resources>