<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ar.com.cotidiano.popularmovies.PopularMovieDetail"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ProgressBar
            android:id="@+id/pb_loading_indicator"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_gravity="center_horizontal|center_vertical"
            />

        <LinearLayout
        android:id="@+id/ll_movie_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

            <ImageView
            android:id="@+id/iv_movies_backdrop"
            android:adjustViewBounds="true"
            android:layout_width="match_parent"
            android:maxHeight="250dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_backdrop"
            android:scaleType="centerCrop"
            />

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            >
                <TextView
                    android:id="@+id/tv_movie_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/tv_movie_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:textSize="20sp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="16dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/original_title"
                        android:textSize="18sp"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:id="@+id/tv_movie_original_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textSize="18sp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="16dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/release_date"
                        android:textSize="18sp"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:id="@+id/tv_movie_release_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textSize="18sp"
                        />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="16dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/vote_average"
                        android:textSize="18sp"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:id="@+id/tv_movie_vote_average"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textSize="18sp"
                        />
                </LinearLayout>

        </LinearLayout>

    </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_no_connection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="32dp"
            android:orientation="vertical"
            android:visibility="invisible">

            <TextView
                android:id="@+id/tv_internet_unavailable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_internet_connection"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#999"
                android:textAlignment="center"
                />

            <Button
                android:id="@+id/btn_try_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/try_again"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_no_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="32dp"
            android:orientation="vertical"
            android:visibility="invisible">

            <TextView
                android:id="@+id/tv_no_data_available"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_data_available"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#999"
                android:textAlignment="center"
                />

            <Button
                android:id="@+id/btn_try_again_no_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/try_again"
                android:layout_gravity="center"/>

        </LinearLayout>

    </FrameLayout>

</ScrollView>