<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="ar.com.cotidiano.popularmovies.MainActivity">

    <ProgressBar
        android:id="@+id/pb_loading_indicator"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_gravity="center_horizontal|center_vertical"
        />

    <GridView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnWidth="150dp"
        android:numColumns="auto_fit"
        android:verticalSpacing="0dp"
        android:horizontalSpacing="0dp"
        android:stretchMode="columnWidth"
        android:adjustViewBounds="true"
        android:paddingRight="1dp"
        android:id="@+id/popular_movies_grid">
    </GridView>

    <LinearLayout
        android:id="@+id/ll_no_connection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/tv_internet_unavailable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_internet_connection"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#999"
            android:textAlignment="center"
            />

        <Button
            android:id="@+id/btn_try_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/try_again"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_no_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/tv_no_data_available"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_data_available"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#999"
            android:textAlignment="center"
            />

        <Button
            android:id="@+id/btn_try_again_no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/try_again"
            android:layout_gravity="center"/>

    </LinearLayout>

</FrameLayout>